--- a/css/game.css
+++ b/css/game.css
@@ -81,6 +81,37 @@ td {
 
 #pass {
     position: absolute;
-    top: 5%;
-    left:10%;
+    width: 40px;
+    height: 20px;
+    top: 1%;
+    left: 1%;
 }
+
+#pass p, #pass #passB{
+    display: none;
+}
+
+p {
+    font-size: 70%;
+}
+
+#passB {
+    height:20px;
+    width:40px;
+    font-size: 70%;
+}
+
+#pass:hover {
+    width: 200px;
+    height: 150px;
+}
+
+#pass:hover p, #pass:hover #passB  {
+    display: block;
+}
+
+#pass:hover .ph {
+    display: none;
+}
+
+
