--- a/css/game.css
+++ b/css/game.css
@@ -1,13 +1,13 @@
 .container13 {    
-    background-image: url("Go_13x13.png");
+    background-image: url("../imgs/Go_13x13.png");
 }
 
 .container19 {    
-    background-image: url("Go_19x19.png");
+    background-image: url("../imgs/Go_19x19.png");
 }
 
 .container9 {    
-    background-image: url("Go_9x9.png");
+    background-image: url("../imgs/Go_9x9.png");
 }
 
 #container {
